tests/saws/fixtures/invalid/05_leading_whitespace.saws
name,age
  "Alice",30
